--- a/FootLand/templates/delivery_boy_dashboard.html
+++ b/FootLand/templates/delivery_boy_dashboard.html
@@ -526,7 +526,7 @@
                 <a href="{% url 'delivery_history' %}" class="nav-link">
                     <i class="fas fa-history"></i> Delivery History
                 </a>
-                <a href="#" class="nav-link">
+                <a href="{% url 'delivery_route_map' %}" class="nav-link">
                     <i class="fas fa-map-marker-alt"></i> Route Map
                 </a>
                 <a href="#" class="nav-link">
