--- a/FootLand/templates/vendor_dashboard.html
+++ b/FootLand/templates/vendor_dashboard.html
@@ -211,6 +211,9 @@
                     <a href="{% url 'vendor_performance_analytics' %}" class="nav-link {% if request.resolver_match.url_name == 'vendor_performance_analytics' %}active{% endif %}">
                         <i class="fas fa-chart-line"></i> Performance Analytics
                     </a>
+                    <a href="{% url 'vendor_reviews' %}" class="nav-link">
+                        <i class="fas fa-comments"></i> Customer Reviews
+                    </a>
                 </nav>
             </div>
 
